@@ -1,3 +1,7 @@
+2008-05-31  Alp Toker  <alp@nuanti.com>
+
+	* src/dh-window.c: Add text search support.
+
 2008-05-30  Alp Toker  <alp@nuanti.com>
 
 	* src/dh-window.c: (window_activate_print):
